# DSCI524_Group13

./: CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  deploy.yml
corpysprofiling/: corpysprofiling.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: corpysprofiling.rst  modules.rst
tests/: test_corpysprofiling.py
