[tool.poetry]
name = "corpysprofiling"
version = "0.1.0"
description = "Package for EDA and EDV on text"
authors = ["Elanor Boyle-Stanley <elanor.boyle.stanley@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
