[tool.poetry]
name = "corpysprofiling"
version = "0.1.4"
description = "Package for EDA and EDV on text"
authors = ["Elanor Boyle-Stanley <elanor.boyle.stanley@gmail.com>"]
license = "GNU General Public License v3"
readme = "README.md"
homepage = "https://github.com/UBC-MDS/coRPysprofiling"
repository = "https://github.com/UBC-MDS/coRPysprofiling"
documentation = 'https://corpysprofiling.readthedocs.io'

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
nltk = "^3.5"
sentence-transformers = "^0.4.1"
numpy = "^1.20.1"
matplotlib = "^3.3.4"
wordcloud = "^1.8.1"
altair = "^4.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
codecov = "^2.1.11"
python-semantic-release = "^7.15.0"
flake8 = "^3.8.4"
Sphinx = "^3.5.1"
sphinxcontrib-napoleon = "^0.7"

[tool.semantic_release]
version_variable = "corpysprofiling/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
